--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,50 @@
+@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&family=Questrial&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --color-dark: #0D0D0D;
+  --color-light: #DCDCD8;
+  --color-accent: #932522;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: var(--color-light);
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+html {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+html body {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  background: url("/images/noise.png") no-repeat center center/cover;
+  position: relative;
+}
+html body::-webkit-scrollbar {
+  display: none;
+}
+html body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #161616;
+  opacity: 0.9;
+  z-index: 1;
+}
+html body section {
+  width: 100%;
 }
