--- a/app/globals.scss
+++ b/app/globals.scss
@@ -4,25 +4,53 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Questrial&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
-  --color-dark: #0D0D0D;
-  --color-light: #DCDCD8;
+  --color-dark: #0d0d0d;
+  --color-light: #dcdcd8;
   --color-accent: #932522;
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   color: var(--color-light);
+  font-family: 'Montserrat', sans-serif;
 }
 
-html{
+.font-quest {
+  font-family: 'Questrial', sans-serif;
+  span {
+    font-family: 'Questrial', sans-serif;
+  }
+}
+
+.font-great {
+  font-family: 'Great Vibes', cursive;
+  span {
+    font-family: 'Great Vibes', cursive;
+  }
+}
+
+.font-mont {
+  font-family: 'Montserrat', sans-serif;
+  span {
+    font-family: 'Montserrat', sans-serif;
+  }
+}
+
+span.font-great {
+  font-family: 'Great Vibes', cursive !important;
+}
+
+html {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
 
-  body{
+  body {
     height: 100%;
     width: 100%;
     display: flex;
@@ -31,11 +59,11 @@ html{
 
     overflow-x: hidden;
     overflow-y: scroll;
-    &::-webkit-scrollbar{
+    &::-webkit-scrollbar {
       display: none;
     }
 
-    background: url('/images/noise.png') no-repeat center center/cover;
+    background: url('/images/noise.png') center/cover no-repeat;
     position: relative;
 
     &::before {
@@ -45,12 +73,39 @@ html{
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: #161616;
-      opacity: .9;
+      background: #000000;
+      opacity: 0.8;
       z-index: 1;
     }
-    section{
+
+    section {
+      z-index: 2;
       width: 100%;
+      padding: 2rem;
+    }
+
+    @media (min-width: 768px) {
+      section {
+        padding: 1rem;
+      }
     }
   }
+}
+
+img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+h1,
+h1 span,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Great Vibes', cursive;
+  text-transform: capitalize;
 }
