--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 :root {
   --color-dark: #0d0d0d;
-  --color-light: #dcdcd8;
+  --color-light: #b9b9a5;
   --color-accent: #932522;
 }
 
@@ -57,7 +57,6 @@ html body {
   overflow-y: scroll;
   background: url("/images/noise.png") center/cover no-repeat;
   position: relative;
-  @medi;
 }
 html body::-webkit-scrollbar {
   display: none;
@@ -76,7 +75,12 @@ html body::before {
 html body section {
   z-index: 2;
   width: 100%;
-  padding: 2rem;
+  padding: 4rem 6rem;
+}
+@media (max-width: 768px) {
+  html body section {
+    padding: 1rem;
+  }
 }
 
 img {
@@ -88,7 +92,13 @@ img {
      object-position: center;
 }
 
-h1, h1 span, h2, h3, h4, h5, h6 {
+h1,
+h1 span,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Great Vibes", cursive;
   text-transform: capitalize;
 }
